# rainbow

./: CMakeLists.txt  README.md
cmake/: config.cmake
examples/: CMakeLists.txt  allocator.cpp
include/rainbow/: deleter.hpp  iterator_traits.hpp  locks.hpp  object.hpp  result.hpp  shared_ptr.hpp  type.hpp  unique_ptr.hpp
include/rainbow/containers/: vector.hpp
include/rainbow/detail/: cpp_features.hpp
include/rainbow/memory/: aligned.hpp  allocation.hpp  allocation_requirements.hpp  allocator.hpp  allocator_features.hpp  block.hpp  cast.hpp  deallocation.hpp  object_operations.hpp  virtual.hpp
include/rainbow/memory/allocators/: committed_virtual_memory.hpp  fixed_size.hpp  hierarchical.hpp  malloc.hpp  owning.hpp  pool.hpp  reserved_virtual_memory.hpp  stack.hpp  virtual_memory.hpp
include/rainbow/object/: allocation.hpp  iterator.hpp  new.hpp
include/rainbow/objects/: allocation.hpp
include/rainbow/views/: vector.hpp
src/: CMakeLists.txt  object.cpp  type.cpp  unique_ptr.cpp
src/containers/: vector.cpp
src/memory/: aligned.cpp  allocation.cpp  allocation_requirements.cpp  allocator.cpp  block.cpp  virtual.cpp  virtual_posix.cpp
src/memory/allocators/: fixed_size.cpp  hierarchical.cpp  malloc.cpp  pool.cpp  reserved_virtual_memory.cpp  stack.cpp  virtual_memory.cpp
src/views/: vector.cpp
